fix align-items in main for nav-btn

--- a/002/styles/002.css
+++ b/002/styles/002.css
@@ -41,7 +41,7 @@
   flex-wrap:wrap;
   color:#ffffff;
   justify-content:center;
-  align-content:center;
+  align-items:center;
   background-color: turquoise;
 
   /*gradient*/
